Dockerfile: "--add-modules", "java.xml.bind"